[package]
name = "digital-crossover-dsp"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.15"
rtrb = "0.3"
rubato = "0.16"
base64 = "0.22"
tokio = { version = "1.52.1", features = ["full"] }
axum = "0.8.9"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tokio-util = "0.7"
