[package]
name = "digital-crossover-dsp"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.15"
rtrb = "0.3"
rubato = "0.16"
base64 = "0.22"
libc = "0.2"
tokio = { version = "1.52.1", features = ["full"] }
axum = "0.8.9"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }
